fix: overflow x situation

--- a/css/about.css
+++ b/css/about.css
@@ -6,11 +6,13 @@ body {
     display: block;
     height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 html {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .navbar {
